--- a/libnetwork/build.gradle
+++ b/libnetwork/build.gradle
@@ -35,7 +35,7 @@ dependencies {
     compileOnly project(":libcommon")
 
     implementation 'com.squareup.okhttp3:okhttp:4.2.0'
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.5.0'
+    api 'com.squareup.okhttp3:logging-interceptor:3.5.0'
     api 'android.arch.persistence.room:runtime:1.1.1'
     api "android.arch.lifecycle:extensions:1.1.1"
     annotationProcessor 'android.arch.persistence.room:compiler:1.1.1'
