--- a/libnetwork/build.gradle
+++ b/libnetwork/build.gradle
@@ -32,16 +32,9 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    compileOnly project(":libcommon")
-
+    implementation project(":libcommon")
     implementation 'com.squareup.okhttp3:okhttp:4.2.0'
     api 'com.squareup.okhttp3:logging-interceptor:3.5.0'
-    api 'android.arch.persistence.room:runtime:1.1.1'
-    api "android.arch.lifecycle:extensions:1.1.1"
-    annotationProcessor 'android.arch.persistence.room:compiler:1.1.1'
-    annotationProcessor "android.arch.lifecycle:compiler:1.1.1"
-
-    implementation 'com.alibaba:fastjson:1.2.59'
 
 
 }
