--- a/libcommon/build.gradle
+++ b/libcommon/build.gradle
@@ -67,10 +67,10 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
     //room数据库
-    api 'android.arch.persistence.room:runtime:1.1.1'
-    api "android.arch.lifecycle:extensions:1.1.1"
-    annotationProcessor 'android.arch.persistence.room:compiler:1.1.1'
-    annotationProcessor "android.arch.lifecycle:compiler:1.1.1"
+    api 'androidx.room:room-runtime:2.2.3'
+//    api 'android.arch.lifecycle:extensions:1.1.1'
+    annotationProcessor 'androidx.room:room-compiler:2.2.3'
+//    annotationProcessor 'androidx.lifecycle:lifecycle-common-java8:2.2.0'
 
     //图片加载
     api 'com.github.bumptech.glide:glide:4.9.0'
